[package]
name = "rusty-cheddar"
version = "0.3.0"
authors = ["Sean Marshallsay <srm.1708@gmail.com>"]

description = "A library to automatically generate C header files from Rust source files."
readme = "README.md"
keywords = ["c", "header", "ffi"]

homepage = "https://github.com/Sean1708/rusty-cheddar"
repository = "https://github.com/Sean1708/rusty-cheddar.git"
documentation = "http://sean1708.github.io/rusty-cheddar"

license = "MIT"

[lib]
name = "cheddar"

[[bin]]
name = "cheddar"
doc = false

[dependencies]
syntex_syntax = "0.24.0"
toml = "0.1.25"
clap = "1"
