[package]
name = "rusty-cheddar"
version = "0.3.3"
authors = ["Sean Marshallsay <srm.1708@gmail.com>"]

description = "A library to automatically generate C header files from Rust source files."
readme = "README.md"
keywords = ["c", "header", "ffi"]

homepage = "https://github.com/Sean1708/rusty-cheddar"
repository = "https://github.com/Sean1708/rusty-cheddar.git"
documentation = "http://sean1708.github.io/rusty-cheddar"

license = "MIT"

[lib]
name = "cheddar"

[[bin]]
name = "cheddar"
doc = false

[dependencies]
itertools = "0.4.18"
# TODO: change this as soon as syntex update is merged
rusty-binder = { git = "https://gitlab.com/weiznich/rusty-binder", rev = "1fa14ace139c6aba839f3b86d6ea2a71f32d49c7" }
clap = "1"
