[package]
name = "rusty-cheddar"
version = "0.3.3"
authors = ["Sean Marshallsay <srm.1708@gmail.com>"]

description = "A library to automatically generate C header files from Rust source files."
readme = "README.md"
keywords = ["c", "header", "ffi"]

homepage = "https://github.com/Sean1708/rusty-cheddar"
repository = "https://github.com/Sean1708/rusty-cheddar.git"
documentation = "http://sean1708.github.io/rusty-cheddar"

license = "MIT"

[features]
default = ["with-syntex"]
with-syntex = [
    "syntex_errors",
    "syntex_syntax",
]

[lib]
name = "cheddar"

[[bin]]
name = "cheddar"
doc = false

[dependencies]
syntex_errors = {version = "0.42.0", optional = true}
syntex_syntax = {version = "0.42.0", optional = true}
toml = "0.1.25"
clap = "1"
